# road-bike-platform

./: .gitignore  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: catalog.py
backend/app/core/: celery_app.py  config.py
backend/app/crawlers/: base.py  giant.py  pinarello.py  specialized.py
backend/app/db/: session.py
backend/app/models/: __init__.py  catalog.py  crawler.py
backend/app/repositories/: catalog.py  crawler.py
backend/app/schemas/: catalog.py  common.py
backend/app/tasks/: celery_tasks.py  run_giant.py  run_pinarello.py  run_specialized.py
backend/data/snapshots/giant/3789/: detail-ca538882b4d1.html
backend/data/snapshots/giant/3790/: detail-0434891bbfda.html
backend/data/snapshots/giant/3796/: detail-ca0903ff809c.html
backend/data/snapshots/giant/3797/: detail-04d48c054338.html
backend/data/snapshots/giant/3798/: detail-8aba874c6647.html
backend/data/snapshots/pinarello/bolide-f-bolide-f/: detail-1452b83460e0.html
backend/data/snapshots/pinarello/bolide-f-bolide-f-2/: detail-ed6a7d053915.html
backend/data/snapshots/pinarello/bolide-f-hr-3d-bolide-f-1/: detail-88d1d4fd59f7.html
backend/data/snapshots/pinarello/bolide-f-hr-3d-bolide-f-1-1/: detail-81c60d5d93b6.html
backend/data/snapshots/pinarello/bolide-f-hr-3d-bolide-f-1-1-1/: detail-a04c496a7370.html
backend/road_bike_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+119 files in other folders)
