[project]
name = "road-bike-platform-backend"
version = "0.1.0"
description = "FastAPI backend and crawlers for a road bike product aggregation platform."
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13",
  "beautifulsoup4>=4.12",
  "celery[redis]>=5.4",
  "fastapi>=0.115",
  "httpx>=0.27",
  "psycopg[binary]>=3.2",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "python-slugify>=8.0",
  "selectolax>=0.3",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6",
  "pytest>=8.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
